[gd_scene load_steps=3 format=3 uid="uid://bunk117rnoi5j"]

[ext_resource type="Script" uid="uid://du6o1441adbxd" path="res://scenes/game/player_camera/player_camera.gd" id="1_gm5eu"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ife7x"]

[node name="PlayerCamera" type="CharacterBody3D"]
script = ExtResource("1_gm5eu")

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
fov = 90.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ife7x")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
spot_range = 5.77029
spot_angle = 53.4375

[node name="ForwardSolidDetector" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -2)

[node name="BackSolidDetector" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 2)
